fix: added size property in output